package gu.dit213.group28.model;

/**
 * This interface defines the methods that the model can use to update the view. Note that the
 * methods themselves are implemented in the view.
 */
public interface Iobserver {
  void update(String s);
}
