package gu.dit213.group28.model.enums;

public enum TransactionType {
  EXPENSE,
  INCOME

}
