@startuml
'https://plantuml.com/class-diagram


interface Icontrollable
interface Iobserver

List <|-- AbstractList
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AbstractList
AbstractList <|-- ArrayList

class Transaction {
Object[] elementData
size()
}

enum TransactionType {
INCOME
EXPENSE
}

@enduml